infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: multi-author-blog/auth
          volumeMounts:
            - name: auth-pvc
              mountPath: /data
      dnsConfig:
        nameservers:
          - 8.8.8.8
      volumes:
        - name: auth-pvc
          persistentVolumeClaim:
            claimName: auth-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
