infra/k8s/file-management-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-management-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-management
  template:
    metadata:
      labels:
        app: file-management
    spec:
      containers:
        - name: file-management
          image: multi-author-blog/file-management
          volumeMounts:
            - name: file-pvc
              mountPath: /data
      dnsConfig:
        nameservers:
          - 8.8.8.8
      volumes:
        - name: file-pvc
          persistentVolumeClaim:
            claimName: file-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: file-management-srv
spec:
  selector:
    app: file-management
  ports:
    - name: file-management
      protocol: TCP
      port: 4004
      targetPort: 4004
