infra/k8s/file-management-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-management-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-management-mongo
  template:
    metadata:
      labels:
        app: file-management-mongo
    spec:
      containers:
        - name: file-management-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: file-management-mongo-srv
spec:
  selector:
    app: file-management-mongo
  ports:
    - name: file-management-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
