infra/k8s/media-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
        - name: media
          image: multi-author-blog/media
---
apiVersion: v1
kind: Service
metadata:
  name: media-srv
spec:
  selector:
    app: media
  ports:
    - name: media
      protocol: TCP
      port: 4004
      targetPort: 4004
