infra/k8s/qa-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa
  template:
    metadata:
      labels:
        app: qa
    spec:
      containers:
        - name: qa
          image: multi-author-blog/qa
---
apiVersion: v1
kind: Service
metadata:
  name: qa-srv
spec:
  selector:
    app: qa
  ports:
    - name: qa
      protocol: TCP
      port: 4003
      targetPort: 4003
